Adicionado atributos para @media print e movido para o final do arquivo

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -3042,28 +3042,6 @@ ul.formTabs {
   }
 }
 
-/* CSS de impressao */
-
-@media print {
-
- #header,
- #footer,
- #em-destaque,
- #viewlet-social-like,
- #voltar-topo,
- #portal-features {
-        display: none !important;
-    }
-
-    .cell {
-        margin: 0 !important;
-        width: 100%;
-    }
-
-    * {
-        position: relative !important;
-    }
-}
 
 /* formulário de contato */
 .field input[type="text"],
@@ -3232,3 +3210,88 @@ body[class*="nitf"] #content article div[property*="articleBody"] p {
 }
 
 /* nitf - redes sociais */
+
+/* ==========================================================================
+   Print
+   ========================================================================== */
+@media print {
+
+    * {
+        background: transparent !important;
+        color: #000 !important; /* Black prints faster: h5bp.com/s */
+        box-shadow: none !important;
+        text-shadow: none !important;
+    }
+
+    a,
+    a:visited {
+        text-decoration: underline;
+    }
+
+    a[href]:after {
+        content: " (" attr(href) ")";
+    }
+
+    abbr[title]:after {
+        content: " (" attr(title) ")";
+    }
+
+    .ir a:after,
+    a[href^="javascript:"]:after,
+    a[href^="#"]:after {
+        content: "";
+    }
+
+    pre,
+    blockquote {
+        border: 1px solid #999;
+        page-break-inside: avoid;
+    }
+
+    thead {
+        display: table-header-group; /* h5bp.com/t */
+    }
+
+    tr,
+    img {
+        page-break-inside: avoid;
+    }
+
+    img {
+        max-width: 100% !important;
+    }
+
+    @page {
+        margin: 0.5cm;
+    }
+
+    p,
+    h2,
+    h3 {
+        orphans: 3;
+        widows: 3;
+    }
+
+    h2,
+    h3 {
+        page-break-after: avoid;
+    }
+
+    #header,
+    #footer,
+    #em-destaque,
+    #viewlet-social-like,
+    #voltar-topo,
+    #portal-features {
+        display: none !important;
+    }
+
+    .cell {
+        margin: 0 !important;
+        width: 100%;
+    }
+
+    * {
+        position: relative !important;
+    }
+}
