--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -9,61 +9,61 @@
 
 
 /* ==========================================================================
-   Font-face local para fonte 'Open Sans'
+   Font-face local para fonte "Open Sans"
    ========================================================================== */
 @font-face {
     font-weight: normal;
     font-style: normal;
-    font-family: 'open_sanslight';
-    src: url('../fonts/opensans-300-webfont.eot');
-    src: url('../fonts/opensans-300-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/opensans-300-webfont.woff') format('woff'),
-         url('../fonts/opensans-300-webfont.ttf') format('truetype'),
-         url('../fonts/opensans-300-webfont.svg#open_sanslight') format('svg');
+    font-family: "open_sanslight";
+    src: url("../fonts/opensans-300-webfont.eot");
+    src: url("../fonts/opensans-300-webfont.eot?#iefix") format("embedded-opentype"),
+         url("../fonts/opensans-300-webfont.woff") format("woff"),
+         url("../fonts/opensans-300-webfont.ttf") format("truetype"),
+         url("../fonts/opensans-300-webfont.svg#open_sanslight") format("svg");
 }
 
 @font-face {
     font-weight: normal;
     font-style: normal;
-    font-family: 'open_sansregular';
-    src: url('../fonts/opensans-400-webfont.eot');
-    src: url('../fonts/opensans-400-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/opensans-400-webfont.woff') format('woff'),
-         url('../fonts/opensans-400-webfont.ttf') format('truetype'),
-         url('../fonts/opensans-400-webfont.svg#open_sansregular') format('svg');
+    font-family: "open_sansregular";
+    src: url("../fonts/opensans-400-webfont.eot");
+    src: url("../fonts/opensans-400-webfont.eot?#iefix") format("embedded-opentype"),
+         url("../fonts/opensans-400-webfont.woff") format("woff"),
+         url("../fonts/opensans-400-webfont.ttf") format("truetype"),
+         url("../fonts/opensans-400-webfont.svg#open_sansregular") format("svg");
 }
 
 @font-face {
     font-weight: normal;
     font-style: normal;
-    font-family: 'open_sanssemibold';
-    src: url('../fonts/opensans-600-webfont.eot');
-    src: url('../fonts/opensans-600-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/opensans-600-webfont.woff') format('woff'),
-         url('../fonts/opensans-600-webfont.ttf') format('truetype'),
-         url('../fonts/opensans-600-webfont.svg#open_sanssemibold') format('svg');
+    font-family: "open_sanssemibold";
+    src: url("../fonts/opensans-600-webfont.eot");
+    src: url("../fonts/opensans-600-webfont.eot?#iefix") format("embedded-opentype"),
+         url("../fonts/opensans-600-webfont.woff") format("woff"),
+         url("../fonts/opensans-600-webfont.ttf") format("truetype"),
+         url("../fonts/opensans-600-webfont.svg#open_sanssemibold") format("svg");
 }
 
 @font-face {
     font-weight: normal;
     font-style: normal;
-    font-family: 'open_sansbold';
-    src: url('../fonts/opensans-700-webfont.eot');
-    src: url('../fonts/opensans-700-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/opensans-700-webfont.woff') format('woff'),
-         url('../fonts/opensans-700-webfont.ttf') format('truetype'),
-         url('../fonts/opensans-700-webfont.svg#open_sansbold') format('svg');
+    font-family: "open_sansbold";
+    src: url("../fonts/opensans-700-webfont.eot");
+    src: url("../fonts/opensans-700-webfont.eot?#iefix") format("embedded-opentype"),
+         url("../fonts/opensans-700-webfont.woff") format("woff"),
+         url("../fonts/opensans-700-webfont.ttf") format("truetype"),
+         url("../fonts/opensans-700-webfont.svg#open_sansbold") format("svg");
 }
 
 @font-face {
     font-weight: normal;
     font-style: normal;
-    font-family: 'open_sansextrabold';
-    src: url('opensans-800-webfont.eot');
-    src: url('opensans-800-webfont.eot?#iefix') format('embedded-opentype'),
-         url('opensans-800-webfont.woff') format('woff'),
-         url('opensans-800-webfont.ttf') format('truetype'),
-         url('opensans-800-webfont.svg#open_sansextrabold') format('svg');
+    font-family: "open_sansextrabold";
+    src: url("opensans-800-webfont.eot");
+    src: url("opensans-800-webfont.eot?#iefix") format("embedded-opentype"),
+         url("opensans-800-webfont.woff") format("woff"),
+         url("opensans-800-webfont.ttf") format("truetype"),
+         url("opensans-800-webfont.svg#open_sansextrabold") format("svg");
 }
 
 
@@ -88,11 +88,11 @@ body {
     background-color: #fff;
     color: #000000;
     font-size: 62.5%;
-    font-family: 'open_sansregular', Arial, Helvetica, sans-serif;
+    font-family: "open_sansregular", Arial, Helvetica, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'open_sanssemibold', Arial, Helvetica, sans-serif;
+    font-family: "open_sanssemibold", Arial, Helvetica, sans-serif;
 }
 
 #content h1 {
@@ -246,7 +246,7 @@ div.position-10 { margin-left: -30.042%; }
     background-image: radial-gradient(ellipse at center,  #19882c 1%,#025310 100%);
     color: #fff;
     /* IE6-9 fallback on horizontal gradient */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#19882c', endColorstr='#025310',GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#19882c", endColorstr="#025310",GradientType=1);
 }
 
 #header > div {
@@ -310,7 +310,7 @@ div.position-10 { margin-left: -30.042%; }
     margin: 30px 0 46px;
     color: #fff;
     font-size: 3.35em;
-    font-family: 'open_sansbold', Arial, Helvetica, sans-serif;
+    font-family: "open_sansbold", Arial, Helvetica, sans-serif;
     line-height: 1em;
 }
 
@@ -490,7 +490,7 @@ input.searchField {
     border: none;
     border-right: none;
     font-size: 1.2em;
-    font-family: 'open_sansregular', Arial, Helvetica, sans-serif;
+    font-family: "open_sansregular", Arial, Helvetica, sans-serif;
 }
 
 #searchGadget,
@@ -839,7 +839,7 @@ table.listing tbody th {
     color: #454545;
     font-weight: normal;
     font-size: 1em;
-    font-family: 'open_sansbold', Arial, Helvetica, sans-serif;
+    font-family: "open_sansbold", Arial, Helvetica, sans-serif;
     line-height: 1em;
 }
 
@@ -1101,13 +1101,13 @@ dl.portlet dt a:visited {
     text-transform: uppercase;
     /* reseta font-weight:bold do public.css */
     font-weight: normal;
-    font-family: 'open_sansbold', Arial, Helvetica, sans-serif;
+    font-family: "open_sansbold", Arial, Helvetica, sans-serif;
 }
 
 .portletNavigationTree > .portletItem > .navTree > .navTreeItem > a > span,
 .portletStaticText > .portletItem > .list-central > .item-central > a {
     font-size: 1.15em;
-    font-family: 'open_sansregular', Arial, Helvetica, sans-serif;
+    font-family: "open_sansregular", Arial, Helvetica, sans-serif;
 }
 
 .portletNavigationTree > .portletItem a span {
@@ -1477,12 +1477,12 @@ dl.portlet ul.navTreeLevel6 li a {
     margin: 0;
     margin-bottom: 0;
     font-size: 14px;
-    font-family: 'open_sansregular', Arial, Helvetica, sans-serif;
+    font-family: "open_sansregular", Arial, Helvetica, sans-serif;
     line-height: 1.2em;
 }
 
 #content .cover-collection-tile h2 {
-    font-family: 'open_sanssemibold', Arial, Helvetica, sans-serif;
+    font-family: "open_sanssemibold", Arial, Helvetica, sans-serif;
 }
 #content .cover-collection-tile h2 a { color: #172938; }
 
@@ -1668,7 +1668,7 @@ dl.portlet ul.navTreeLevel6 li a {
 .lista-vertical .tile-footer a,
 .lista-vertical .collection-footer a {
     font-size: 11px;
-    font-family: 'open_sansregular', Arial, Helvetica, sans-serif;
+    font-family: "open_sansregular", Arial, Helvetica, sans-serif;
 }
 
 .lista-vertical .list-item a,
@@ -1852,7 +1852,7 @@ dl.portlet ul.navTreeLevel6 li a {
 #content .outstanding-header h2,
 #content .outstanding-header h3,
 #content .outstanding-header h4 {
-    font-family: 'open_sansregular', Arial, Helvetica, sans-serif;
+    font-family: "open_sansregular", Arial, Helvetica, sans-serif;
 }
 
 .outstanding-header .outstanding-title {
@@ -1906,7 +1906,7 @@ dl.portlet ul.navTreeLevel6 li a {
     text-align: right;
     text-transform: uppercase;
     font-size: 10px;
-    font-family: 'open_sansregular', Arial, Helvetica, sans-serif;
+    font-family: "open_sansregular", Arial, Helvetica, sans-serif;
     line-height: 2.8em;
 }
 
@@ -2640,12 +2640,12 @@ dl.portlet div.listingBar a:link {
     padding-left: .6em;
     color: #7dc48a;
     font-size: 2em;
-    font-family: 'open_sansbold', Arial, Helvetica, sans-serif;
+    font-family: "open_sansbold", Arial, Helvetica, sans-serif;
 }
 
 #doormat-container dd {
     padding: .5em 1.2em 0 1.2em;
-    font-family: 'open_sansregular', Arial, Helvetica, sans-serif;
+    font-family: "open_sansregular", Arial, Helvetica, sans-serif;
 }
 
 #doormat-container dd a { font-size: 1.4em; }
@@ -2703,7 +2703,7 @@ body[class*="nitf"] #viewlet-social-like>div {
     color: #000;
     text-indent: 2px;
     font-size: 12px;
-    font-family: 'open_sansregular', Arial, Helvetica, sans-serif;
+    font-family: "open_sansregular", Arial, Helvetica, sans-serif;
 }
 
 #content .field textarea { resize: none; }
@@ -2759,7 +2759,7 @@ body[class*="nitf"] #content p.section {
     letter-spacing: normal;
     font-weight: normal;
     font-size: 16px;
-    font-family: 'open_sansbold', Arial, Helvetica, sans-serif;
+    font-family: "open_sansbold", Arial, Helvetica, sans-serif;
 }
 
 /* nitf - título da notícia */
@@ -3097,7 +3097,7 @@ body[class*="nitf"] #content article div[property*="articleBody"] p {
         color: #064d13;
         text-indent: 13px;
         font-size: 18px;
-        font-family: 'open_sansregular', Arial, Helvetica, sans-serif;
+        font-family: "open_sansregular", Arial, Helvetica, sans-serif;
         line-height: 39px;
     }
 
