--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1,10 +1,19 @@
 /*
- * @autores
+ * @Autores
+ *
  * - Simples Consultoria - www.simplesconsultoria.com.br
  * - DESERTO Digital - www.desertodigital.com.br
  *
- * Leia esta orientações antes de implementar alterações de css
+ * @Referencias
+ *
+ * Lista de padrões, convenções e boas praticas CSS que devem ser seguidas.
  * https: //github.com/necolas/idiomatic-css/tree/master/translations/pt-BR
+ *
+ * Plugins para ordenar os atributos de CSS.
+ * http://csscomb.com/
+ *
+ * Validador de CSS do W3C.
+ * http://jigsaw.w3.org/css-validator/
  */
 
 
