correção nos comentarios dos links de destaque

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1224,7 +1224,7 @@ dl.portlet li {
 #content ol li,
 dl.portlet ol li { list-style: decimal outside; }
 
-/* Icones da Central de conteudo
+/* Menu em destaque
    ========================================================================== */
 
 #em-destaque ul {
