--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -77,3 +77,13 @@
 }
 
 .portletNavigationTree .portletHeader a { color: #00510f !important; }
+
+
+/* ==========================================================================
+   Collective Cover
+   ========================================================================== */
+
+/* Tiles
+   ========================================================================== */
+
+.tile a { color: #162937 !important; }
