--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -87,3 +87,17 @@
    ========================================================================== */
 
 .tile a { color: #162937 !important; }
+
+
+/* ==========================================================================
+   Footer
+   ========================================================================== */
+
+/* Doormat
+   ========================================================================== */
+
+#doormat-container { background: #034811; }
+
+#doormat-container dl { border-left: 1px dotted #7dc48a; }
+
+#doormat-container dt { color: #7dc48a; }
