--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -19,6 +19,7 @@
  * http://jigsaw.w3.org/css-validator/
  */
 
+
 /* ==========================================================================
    Cabeçalho do portal
    ========================================================================== */
@@ -61,6 +62,13 @@
 
 #portal-logo,
 #portal-title { color: #fff !important; }
+
+/* Menu site actions - Acessibilidade, Alto Contraste, Mapa do site
+   ========================================================================== */
+
+#portal-siteactions { border-bottom: 1px dotted #9bc2a3; }
+
+#portal-siteactions a { color: #dcffe3; }
 
 /* Menu sobre o portal
    ========================================================================== */
